# backend/src/models/like.js
@@ -8,7 +8,7 @@ const mongoose = require('mongoose')
 const likeSchema = new mongoose.Schema({
     userId: { type: mongoose.Schema.Types.ObjectId, ref: 'User', required: true, index: true },
 
-    postId: { type: mongoose.Schema.Types.ObjectId, ref: 'Post', required: true, index: true },
+    blogId: { type: mongoose.Schema.Types.ObjectId, ref: 'blog', required: true, index: true },
 },
     { collection: 'likes', timestamps: true })
 
